# XNL-21BCE2223-LLM-1

./: README.md  main.py  pyproject.toml
XNL - Dashboard (Frontend & Backend)/: backend.py  pyproject.toml  requirements.txt  streamlit_app.py
XNL - Dashboard (Frontend & Backend)/attached_assets/: Pasted-import-streamlit-as-st-import-requests-import-plotly-express-as-px-Backend-API-URL-Replace-w-1741956559166.txt
XNL - FinTech API/: main.py
XNL - Market Sentiment Analysis/: main.py  pyproject.toml
